--- a/content/payments/umap/api-integration.mdx
+++ b/content/payments/umap/api-integration.mdx
@@ -91,7 +91,7 @@ You can use the API credentials provided by Setu to test UMAP on sandbox
         <Card padding="small" shape="rounded">
             <p>For Aggregators</p>
             <a
-                href="https://documenter.getpostman.com/view/22511424/2s9Y5VU4MC"
+                href="/payments/umap/api-integration/aggregators"
                 target="_blank"
             >
                 Start API integration ->
@@ -101,7 +101,7 @@ You can use the API credentials provided by Setu to test UMAP on sandbox
     <Portion desktopSpan="half">
         <Card padding="small" shape="rounded">
             <p>For Merchants</p>
-            <a href="/data/account-aggregator/api-integration" target="_blank">
+            <a href="/payments/umap/api-integration/merchants" target="_blank">
                 Start API integration ->
             </a>
         </Card>
