create merchant api changes

--- a/content/payments/umap/merchant-onboarding/create-merchant-api.mdx
+++ b/content/payments/umap/merchant-onboarding/create-merchant-api.mdx
@@ -22,7 +22,7 @@ Create merchants in UPI with this API by providing business details & aggregator
         <tr>
             <th>Path</th>
             <td>
-                <code>aggregators/wrapper/merchants</code>
+                <code>aggregators/merchants</code>
             </td>
         </tr>
         <tr>
