[AG-1007] Dual consent fixes

--- a/content/data/account-aggregator/api-integration/consent-flow.mdx
+++ b/content/data/account-aggregator/api-integration/consent-flow.mdx
@@ -402,9 +402,9 @@ In the Account Aggregator (AA) ecosystem in India, the multi consent feature all
     <tr>
       <th>Base URL</th>
       <td>
-        Production: <code>https://fiu-sandbox.setu.co</code>
+        Sandbox: <code>https://fiu-sandbox.setu.co</code>
         <br />
-        Sandbox: <code>https://fiu-unified.setu.co</code>
+        Production: <code>https://fiu-unified.setu.co</code>
       </td>
     </tr>
     <tr>
@@ -423,7 +423,8 @@ In the Account Aggregator (AA) ecosystem in India, the multi consent feature all
       <th>Headers</th>
       <td>
         <code>Content-Type</code>: <code>application/json</code> <br />
-        <code>Authorization</code>: Bearer <code>access_token</code>
+        <code>Authorization</code>: Bearer <code>access_token</code> <br />
+        <code>x-product-instance-id</code>: <code>product-instance-id</code>
       </td>
     </tr>
   </tbody>
@@ -436,7 +437,7 @@ In the Account Aggregator (AA) ecosystem in India, the multi consent feature all
 <CodeBlockWithCopy language="json">
   {`{
     "optionalConsents": [],
-    "mandatoryConsents": ["36c34bbc-9408-454e-a80e-e44f4fc4cdbf"]
+    "mandatoryConsents": ["36c34bbc-9408-454e-a80e-e44f4fc4cdbf", "037801eb-923e-4592-80cc-b05cecaedba1"]
 }`}
 </CodeBlockWithCopy>
 
@@ -460,12 +461,10 @@ In the Account Aggregator (AA) ecosystem in India, the multi consent feature all
               <h5>Response</h5>
               <CodeBlockWithCopy language="json">
                 {`{
-    "status": "success",
-    "message": "Dual consent initiated successfully.",
-    "data": {
-        "consentHandleId": "unique-consent-handle-id",
-        "redirectUrl": "https://example.com/consent/confirmation"
-    }
+    "consentCollectionId": "5f3a5564-9abc-48f9-ae32-af4b22c781ce",
+    "url": "https://fiu-sandbox.setu.co/v2/consents/webview/5f3a5564-9abc-48f9-ae32-af4b22c781ce",
+    "txnid": "6aeb84aa-b078-4ab1-bdb6-fa0e82b18bb3",
+    "traceId": "b3f26ccb-a64d-4692-a02e-282bd8ef7778"
 }`}
               </CodeBlockWithCopy>
             </>
@@ -479,8 +478,10 @@ In the Account Aggregator (AA) ecosystem in India, the multi consent feature all
               <h5>Response</h5>
               <CodeBlockWithCopy language="json">
                 {`{
-    "status": "error",
-    "message": "Invalid request data."
+    {
+    "traceId": "ec754b36-bf5f-4673-8be1-9d203d374c83",
+    "errorCode": "InvalidRequest",
+    "errorMsg": "Consent doesn't belong to same customer id"
 }`}
               </CodeBlockWithCopy>
             </>
